[tool.poetry]
name = "noise-reduce"
version = "0.1.0"
description = ""
authors = ["marco-baldan <marco.baldan@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
noisereduce = "^3.0.2"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
